--- a/_posts/2017-01-27-TBS-PBIE.md
+++ b/_posts/2017-01-27-TBS-PBIE.md
@@ -13,7 +13,7 @@ language: English
 verticals: "Retail, Consumer Products & Services"
 ---
 
-![Logo of TBS](../images/2017-01-27-TBS/tbs-logo.png)
+![Logo of TBS]({{ site.baseurl }}/images/2017-01-27-TBS/tbs-logo.png)
 
 In January 2017 at the Microsoft campus in Reading, United Kingdom, Technological Business Solutions (TBS) and Microsoft teamed up for a three-day engineering hackfest to recreate intelligent reports in Microsoft Power BI Desktop, which would then be embedded into an existing web application. The aim of the hackfest was to replace their existing reporting tool, SSRS, with Power BI. The idea was to build out a proof of concept to help decision makers at TBS decide whether they should switch to Power BI or continue to use SSRS.
 
@@ -75,13 +75,13 @@ The following two images show the same architecture diagram. The plan was to hav
 
 First, we used Power BI Desktop to recreate the SSRS reports in Power BI. This part was simple (although we encounter some challenges, which are explained later) and involved us loading the data from SQL Database, manually mapping the relationships to the tables, and recreating the dashboard using Power BI visuals. When the reports were ready, we exported the .pbix files and uploaded them to Power BI in Azure so that the reports were live and available to be embedded into any application using Power BI Embedded. Here are the final reports:
 
-<img alt="Power BI Desktop dashboard, view 1" src="{{ site.baseurl }}/images/dashboard1.PNG" width="900">
+<img alt="Power BI Desktop dashboard, view 1" src="{{ site.baseurl }}/images/2017-01-27-TBS/dashboard1.PNG" width="900">
 
-<img alt="Power BI Desktop dashboard, view 2" src="{{ site.baseurl }}/images/dashboard2.PNG" width="900">
+<img alt="Power BI Desktop dashboard, view 2" src="{{ site.baseurl }}/images/2017-01-27-TBS/dashboard2.PNG" width="900">
 
-<img alt="Power BI Desktop dashboard, view 3" src="{{ site.baseurl }}/images/dashboard3.PNG" width="900">
+<img alt="Power BI Desktop dashboard, view 3" src="{{ site.baseurl }}/images/2017-01-27-TBS/dashboard3.PNG" width="900">
 
-<img alt="Power BI Desktop dashboard, view 4" src="{{ site.baseurl }}/images/dashboard4.PNG" width="900">
+<img alt="Power BI Desktop dashboard, view 4" src="{{ site.baseurl }}/images/2017-01-27-TBS/dashboard4.PNG" width="900">
 
 We then developed a simple ASP.NET application that used the Power BI Embedded SDK to display the reports. The following C# code is the main controller of the ASP.NET application. This code gets all the reports available in a Power BI workspace collection and puts them into a list. This list is then used in the view to display all the available reports and embeds the report selected into the iFrame on the view page.
 
@@ -187,17 +187,17 @@ public class DashboardController : Controller
 
 The final step of this project was to embed the ASP.NET application in the Silverlight application. (The reasoning for this is described later in the challenges section.) This part was simple: We just updated the iFrame in the Silverlight application to point to the reports page in the ASP.NET application. (The Report Admin page also had an iFrame that pointed to the import page in the ASP.NET application.) The following image shows how this update was done: A value in SQL Database controls the lists for buttons in the application. We used localhost because we wanted to test everything locally before deploying the web application.
 
-<img alt="Silverlight iFrame update" src="{{ site.baseurl }}/images/embedding-webapp-into-portal.png" width="900">
+<img alt="Silverlight iFrame update" src="{{ site.baseurl }}/images/2017-01-27-TBS/embedding-webapp-into-portal.png" width="900">
 
 #### Finished solution ####
 
 This is the final view of reports embedded into the existing Silverlight web application.
 
-<img alt="Power BI Embedded reports" src="{{ site.baseurl }}/images/final-report.png" width="900">
+<img alt="Power BI Embedded reports" src="{{ site.baseurl }}/images/2017-01-27-TBS/final-report.png" width="900">
 
 The following image shows the page that allows users to upload their own Power BI reports. The idea is that users will use Power BI Desktop with sample data provided by TBS to make their own reports. They would then use this tool to upload the reports (as .pbix files). Using the Power BI Embedded APIs, we will change the connection string to point to the real data instead of the sample data.
 
-<img alt="Power BI report upload tool" src="{{ site.baseurl }}/images/final-import.png" width="900">
+<img alt="Power BI report upload tool" src="{{ site.baseurl }}/images/2017-01-27-TBS/final-import.png" width="900">
 
 ### Challenges, learnings, and workarounds ###
 
@@ -211,11 +211,11 @@ Overall, this solution worked really well for the demo we presented the next day
 
 The following image shows the plain ASP.NET application that is using Power BI Embedded in an iFrame to display the reports.
 
-<img alt="ASP.NET application Power BI report" src="{{ site.baseurl }}/images/embedded-webapp-dashboard.png" width="900">
+<img alt="ASP.NET application Power BI report" src="{{ site.baseurl }}/images/2017-01-27-TBS/embedded-webapp-dashboard.png" width="900">
 
 The following image shows the Silverlight application that is using an iFrame to show the ASP.NET page shown previously.
 
-<img alt="Silverlight application Power BI report" src="{{ site.baseurl }}/images/final-report.png" width="900">
+<img alt="Silverlight application Power BI report" src="{{ site.baseurl }}/images/2017-01-27-TBS/final-report.png" width="900">
 
 #### No find-and-replace regex support ####
 
