--- a/_posts/2017-01-27-TBS-PBIE.md
+++ b/_posts/2017-01-27-TBS-PBIE.md
@@ -5,7 +5,7 @@ author: "Lilian Kasem"
 author-link: "http://liliankasem.com/"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-03-31
-categories: Power BI Embedded
+categories: [Power BI Embedded]
 color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: This project had the key goal of switching all SSRS reports into Power BI reports and using Power BI Embedded to display these reports in a Silverlight application. It also implemented the key feature of allowing users to upload and instantly view their own Power BI reports in the web application.
