--- a/_posts/2016-12-01-nexosis.md
+++ b/_posts/2016-12-01-nexosis.md
@@ -17,13 +17,13 @@ language: English
 
 Startup company Nexosis is looking to optimize the time a new feature takes going from ideation and into their customers' hands, using the DevOps practices of Infrastructure as Code, continuous integration, and automated testing, among others.
 
-In working with Nexosis, we started with [value stream mapping](https://en.wikipedia.org/wiki/Value_stream_mapping) (VSM) the current process for taking “customer stories” through planning, development, and testing, and into production. The VSM and the parties involved highlighted areas of lead time that could be improved by reducing or eliminating the number of manual steps, by re-creating and automating the development and test infrastructure, and by adding more automation to their testing processes.
+In working with Nexosis, we started with [value stream mapping](https://en.wikipedia.org/wiki/Value_stream_mapping) (VSM) the current process for taking "customer stories" through planning, development, and testing, and into production. The VSM and the parties involved highlighted areas of lead time that could be improved by reducing or eliminating the number of manual steps, by re-creating and automating the development and test infrastructure, and by adding more automation to their testing processes.
 
 The technologies discussed include Azure Resource Manager template-driven deployments, Azure Automation Desired State Configuration (DSC), virtual machine (VM) scale sets, and automated testing. The core team includes LT Lead David Washington ([@dwcares](http://twitter.com/dwcares)), who owns the relationship with CTO and co-founder Jason Montgomery at Nexosis; TE Leads Kevin Remde ([@KevinRemde](http://twitter.com/kevinremde)) and Brian Sherwin ([@bsherwin](http://twitter.com/bsherwin)); and Dev Lead Jennelle Crothers ([@jkc137](http://twitter.com/jkc137))
 
 ## Customer profile ##
 
-Founded in early 2015, [Nexosis](http://nexosis.com/) is a startup company of thirteen employees based in Columbus, Ohio. (See their full team and investors at [Our Team](http://nexosis.com/Home/Team).) They are a graduate of the [TechStars Retail accelerator](http://www.techstars.com/programs/retail-program/) program. Their main product, Axon, “ingests multiple data sources to create actionable insights.” Axon can take advantage of standard input feeds, such as sales transactions or traffic counts, and uses self-learning algorithms that adjust to a customer's baselines and trends. With this information, Axon can provide forecasts to make better-informed decisions.
+Founded in early 2015, [Nexosis](http://nexosis.com/) is a startup company of thirteen employees based in Columbus, Ohio. (See their full team and investors at [Our Team](http://nexosis.com/Home/Team).) They are a graduate of the [TechStars Retail accelerator](http://www.techstars.com/programs/retail-program/) program. Their main product, Axon, is an artificial intelligence platform that "ingests multiple data sources to create actionable insights," ranging from demand forecasting to event and promotional impact analysis. Axon can take advantage of standard input feeds, such as sales transactions or traffic counts, and uses self-learning algorithms that adjust to a customer's baselines and trends. With this information, Axon can provide forecasts to make better-informed decisions.
 
 ![Diagram of value proposition for Axon]({{ site.baseurl }}/images/nexosis/nexosis2.png)
 
@@ -107,7 +107,7 @@ Following the exercise, we received this note from Jeffrey Gabriel:
 
 > Hi Kevin,
 > 
-> I really appreciated the time you and the team spent with us. I particularly benefited from the VSM exercise as it helped visually just how much our most constrained and “heroic” resource was really spread out across the entire stream. This was helpful to see as it pointed to where automation of our infrastructure would bring the greatest value.
+> I really appreciated the time you and the team spent with us. I particularly benefited from the VSM exercise as it helped visually just how much our most constrained and "heroic" resource was really spread out across the entire stream. This was helpful to see as it pointed to where automation of our infrastructure would bring the greatest value.
 > 
 > I have also been able lean on the tools you introduced to us as I have been putting together an automation script for our entire Atlassian tool suite environment. Identification of the PowerShell ISE, the home of the quickstart templates, and tips on best practices have all been helpful.
 > 
