--- a/_posts/2017-03-01-CS50.md
+++ b/_posts/2017-03-01-CS50.md
@@ -30,8 +30,8 @@ This means the infrastructure needs to support more than 100,000 students in any
 
 The project took place over the course of three weeks with the premise of standing up all infrastructure needed in Azure, and completely automating everything so that all applications could simply be plugged into a GitHub repo to deploy. In the professor’s words, "I need you to get GitHub, Codeship, and Azure working together, and wire it all up." The project team was composed of members from both Microsoft and the university and included:
 
-- Major US university – Professor, who defined requirements
-- Major US university – Senior TA (no Dev role in project), who leveraged processes and code for deploying all classroom apps 
+- Professor, major US university – Defined requirements
+- Senior TA (no Dev role in project), major US university – Leveraged processes and code for deploying all classroom apps 
 - [Rachel White](https://twitter.com/ohhoe) – Technical Evangelist, Microsoft – Project Lead  
 - [Jessica Deen](https://twitter.com/jldeen) – Technical Evangelist, Microsoft – Developer
 - [Dan Stolts](https://twitter.com/itproguru) – Senior Technical Evangelist, Microsoft – Dev Lead
@@ -157,7 +157,7 @@ This project provided the university the ability to "move forward" in their DevO
 A solution was delivered leveraging CI/CD through Codeship, Docker, Azure Container Service, and Linux VMs. These technologies and processes will save time and money. 
 
 ### Challenges and solutions
-
+The following are the challenges we faced and how we solved them:
 - TAs time to ramp up was weeks or months; now it's a few hours.
 - Running a single VM for each container was wasteful; now many containers can be run on a single VM.
 - Managing the infrastructure (VM) was challenging; running Azure Container Service completely eliminated this challenge. 
