--- a/_posts/2017-02-13-CAD.md
+++ b/_posts/2017-02-13-CAD.md
@@ -2,7 +2,7 @@
 layout: post
 title: "CADEX moves to 3D visualization and conversion as a service"
 author: "Alex Belotserkovskiy"
-author-link: "#"
+author-link: "http://twitter.com/ahriman_ru"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-04-18
 categories: [Azure App Service]
@@ -13,7 +13,7 @@ verticals: [Manufacturing, Engineering]
 language: English
 ---
 
-This is the report of a technical engagement between developers from Microsoft and CADEX (http://cadexchanger.com) and its results: the migration of a complex, C++-based 3D CAD visualization and conversion product to the cloud.
+This is the report of a technical engagement between developers from Microsoft and [CADEX](http://cadexchanger.com) and its results: the migration of a complex, C++-based 3D CAD visualization and conversion product to the cloud.
 
 CAD Exchanger is the desktop/mobile solution for 3D visualization/conversion aimed at addressing CAD data interoperability challenges. The software enables users to visualize 3D data, convert it across a wide range of CAD formats, build computational meshes for engineering analysis, display 3D model properties, and more. The list of supported formats is constantly growing and includes both neutral formats (IGES, STEP, STL, JT, VRML, X3D, OBJ) and modeling kernel-specific ones (ACIS, Parasolid, Open CASCADE, Rhino/Open NURBS).
 
@@ -42,10 +42,10 @@ The client uses a web application framework (Ember) for submitting the job. WebG
 
 The web app service deployed into the Web App feature of Azure App Service is the Node.js back end (using the Sails MVC framework) that does the following:
 
-1) Save uploaded files to Azure Storage
-2) Push messages to Azure Service Bus queue
-3) Interact with Azure DocumentDB or SQL Server to work with user data (such as settings or list of files)
-4) Use cache (such as Redis) to organize real-time working and file sharing
+1. Save uploaded files to Azure Storage
+2. Push messages to Azure Service Bus queue
+3. Interact with Azure DocumentDB or SQL Server to work with user data (such as settings or list of files)
+4. Use cache (such as Redis) to organize real-time working and file sharing
 
 On the other end, the VMs are encapsulated in the VM cluster that is being automatically scaled up and down depending on how many messages (tasks) are in the queue. VMs perform heavyweight operations with 3D models:
 
@@ -155,7 +155,7 @@ The storage part of the architecture consisted of the following:
 
 * **SQL Server and Azure DocumentDB** – Storing the user information (files list, usernames, and so on) in the related storage is the traditional approach. In the current stage, both SQL Server and DocumentDB are operational and being tested for the CAD Exchanger solution in the cloud.
 
-# Deployment #
+## Deployment ##
 
 For the CAD Exchanger team, it was critical to test their solution in the cloud, because there was no confidence that, given the dynamic nature of the cloud, technologies that backed the VM infrastructure as well as various [limits](https://docs.microsoft.com/en-us/azure/azure-subscription-service-limits) won't be the issue for the normal workflows.
 
