--- a/_posts/2017-03-07-SnapMD.md
+++ b/_posts/2017-03-07-SnapMD.md
@@ -23,7 +23,7 @@ Core team:
 - Daniel Bouganim – CTO, SnapMD 
 - Anthony Kelani ([@akelani](https://twitter.com/akelani)) – Technical Evangelist, Startups, Microsoft 
 
-Over the course of 3 days, we worked together to migrate their application from virtual machines (VMs) running on private servers to the fully managed Azure App Service, and converted one of their daily user-account cleaning processes to scalable code in Azure Functions.
+During the course of three days, we worked together to migrate their application from virtual machines (VMs) running on private servers to the fully managed Azure App Service, and converted one of their daily user-account cleaning processes to scalable code in Azure Functions.
 
 ## Customer profile ##
 
@@ -61,7 +61,7 @@ We then deployed the API app to the API App Service.
 
 ![SnapMD on Azure: API App Service portal]({{ site.baseurl }}/images/SnapMD/snapmd-api_app_portal.png)
 
-We had to add a few configurations to get the application to work. We added the connection strings for the database and Redis to the API applicatioon settings.
+We had to add a few configurations to get the application to work. We added the connection strings for the database and Redis to the API application settings.
 
 ![SnapMD on Azure: API application settings]({{ site.baseurl }}/images/SnapMD/snapmd-api_app_settings.png)
 
