--- a/_posts/2017-01-17-Quantum.md
+++ b/_posts/2017-01-17-Quantum.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Azure App Service hackfest: Quantum puts its Astro Reality solution backend on App Service"
+title:  "Quantum puts its Astro Reality solution backend on Azure App Service"
 author: "Yuheng Ding"
 author-link: "https://github.com/andrewdyhhub/"
 #author-image: "{{ site.baseurl }}/images/2017-1-17-Quantum/YuhengDing.jpg"
