Unpublishing using published: false
Request of Telly Cooper

--- a/_posts/2017-03-15-BrisBot.md
+++ b/_posts/2017-03-15-BrisBot.md
@@ -11,6 +11,7 @@ color: "blue"
 excerpt: This project describes building a chat bot that can reach children wherever they may be, while tackling some of the concerns that come into play when building experiences for children.
 language: [English]
 verticals: [Social]
+published: false
 ---
 
 Some children hesitate to pick up the phone and call a helpline. It takes courage, no matter how big or small the problem is. Being able to speak to someone is always a great start. 
