--- a/_posts/2017-03-15-BrisBot.md
+++ b/_posts/2017-03-15-BrisBot.md
@@ -333,7 +333,7 @@ These models were then packaged in a separate folder and linked into the Web API
 
 #### Dependency injection
 
-When building and collaborating on the project, we leveraged mock services and mock data as different layers of the solution were being developed. Working in parallel and simulating depedencies allowed us to develop and test faster.
+When building and collaborating on the project, we leveraged mock services and mock data as different layers of the solution were being developed. Working in parallel and simulating dependencies allowed us to develop and test faster.
 
 To make this workflow possible, we used the [Autofac](https://autofac.org/) dependency injection framework. Dependency injection is a technique for injecting objects into clients (such as dialogs and controllers) rather than having the client itself building the service. 
 
