--- a/_posts/2017-02-22-Vacay.md
+++ b/_posts/2017-02-22-Vacay.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Microsoft teams up with Vacay to provide scalable Web Apps and a build system for Android development"
 author: "Paul DeCarlo"
-author-link: "#"
+author-link: "https://twitter.com/pjdecarlo"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date:   2017-04-28 
 categories: [Azure App Service, DevOps]
@@ -45,7 +45,11 @@ Vacay started out with an infrastructure as a service (IaaS) environment that re
 
 Following is a diagram of the pre-existing architecture.
 
+<br/>
+
 ![Original architecture]({{ site.baseurl }}/images/Vacay/VacayOrigArchitecture.png) 
+
+<br/>
 
 This diagram shows two informational web pages (WordPress instances) running on two individual virtual machines running Internet Information Services (IIS). One of these virtual machines also runs a REST API and MVC app to service their proposed mobile application. Development work was done in GitLab running on a third virtual machine.
 
@@ -59,41 +63,77 @@ We created a proposal to shift existing resources into three web apps (PaaS) wit
 
 The following diagram shows what the newly proposed architecture looks like.
 
+<br/>
+
 ![Current architecture]({{ site.baseurl }}/images/Vacay/VacayArchitecture.png) 
+
+<br/>
 
 Moving the WordPress instances off of IIS and into a Web Apps host was resolved by first creating a fresh WordPress instance by using one of Azure's built-in Web Apps templates for WordPress.
 
+<br/>
+
 ![WordPress Template]({{ site.baseurl }}/images/Vacay/WPTemplate.PNG)
+
+<br/>
 
 We then installed the [All-in-One WP Migration Plug-in](https://wordpress.org/plugins/all-in-one-wp-migration/) from WordPress.org onto both the existing and new WordPress instances. Using this plug-in, we exported from the existing site and then imported the resulting backup into the freshly deployed WordPress instance. All that was left was pointing the A record of the existing domain name from the IP address of the virtual machine to the IP address of the Web Apps instance. This was accomplished by selecting the **Custom Domains** tab for the web app within Azure, retrieving the IP address, and modifying the DNS record with Vacay's registrar.   
 
+<br/>
+
 ![A Record]({{ site.baseurl }}/images/Vacay/ARecord.PNG)
+
+<br/>
 
 Migration of the ASP.NET MVC 5 application was possible by deploying the codebase directly to a new Web Apps instance from within Visual Studio by using the [Azure SDK 2.5](https://msdn.microsoft.com/en-us/magazine/dn879352.aspx). To deploy the codebase, right-click the **MVC Project** and select **Publish Web App** within Visual Studio.
 
+<br/>
+
 ![VS Deploy]({{ site.baseurl }}/images/Vacay/VSDeploy.PNG)
+
+<br/>
 
 ![VS Publish]({{ site.baseurl }}/images/Vacay/VSPublish.PNG)
 
+<br/>
+
 It should be noted that other migrations may require configuration of deployment credentials under a newly created Web Apps instance. 
+
+<br/>
 
 ![Deployment Credentials]({{ site.baseurl }}/images/Vacay/Creds.PNG)
 
+<br/>
+
 After your credentials are configured, Azure will supply an FTP hostname that can be used for transferring your existing codebase. You may also set up continuous deployment to push your code from a service such as Visual Studio Team Services, OneDrive, Git, GitHub, Bitbucket, or Dropbox.  
 
+<br/>
+
 ![Deployment sources]({{ site.baseurl }}/images/Vacay/DeploymentSources.PNG)
+
+<br/>
 
 We were fortunate that the existing MVC 5 codebase pointed to an existing Azure SQL Database. As a result, the database `ConnectionStrings` were still valid after moving into the PaaS host, and our site was up and running following migration of the codebase.
 
 However, our migration to PaaS did not go completely without issue. On November 8, 2016, the network quota maxed out on the [VacayCoupons](http://vacaycoupons.azurewebsites.net) property.
 
+<br/>
+
 ![Outage]({{ site.baseurl }}/images/Vacay/Outage.PNG)
+
+<br/>
 	
 We solved this by scaling up the Web Apps instance to an S1 and enabling Autoscale, which can be configured based on a target CPU range or by defining your own scheduling and performance rules. 
 
+<br/>
+
 ![Autoscale]({{ site.baseurl }}/images/Vacay/AutoScale.PNG)
 
+<br/>
+
 ![ConfigScale]({{ site.baseurl }}/images/Vacay/ConfigScale.PNG)
+
+<br/>
 
 After applying Autoscale, Vacay has run smoothly without service interruption since November 2016.  
 
@@ -107,35 +147,63 @@ The original environment was designed for iOS; however, Vacay wanted to create a
 
 By conducting a lightweight value stream mapping exercise, we were able to assess the existing workflow to build and distribute Vacay iPhone apps.
 
+<br/>
+
 ![Vacay iOS]({{ site.baseurl }}/images/Vacay/VacayiOS.PNG) 
+
+<br/>
 
 Vacay's planning, development, and release processes were not fully connected. The  development process relied on the stakeholder to deliver requirements directly to development. The development team created builds for eventual distribution by using Apple TestFlight, and decided when to push a build to TestFlight when they finished a list of minimal requirements and fixed internal defects. After a release candidate was pushed to TestFlight, regression testing started if the App Store submission process failed. 
 
 The new app platform gave the team an opportunity to improve the development process. Our solution distributes testable Android Package Kit (APK) builds over HockeyApp. Stakeholders could give the development team feedback while the development workflow continued until both groups agreed on a successful build. Continuous integration and deployment provided up-to-minute build availability, which allowed testers and stakeholders to immediately test bleeding edge and known stable builds. Due to differences in marketplace submission times for Android vs iOS, we show a sizable lead time reduction, but our most valuable improvements came from using Team Services to directly tie in all the processes. Stakeholders can now provide work items to developers and receive status updates as work progresses. Work can be unit-tested to assign appropriate quality, passing builds are immediately available to testers, and candidates with tracked improvements are available for marketplace release. 
 
+<br/>
+
 ![Vacay Droid]({{ site.baseurl }}/images/Vacay/VacayDroid.PNG) 
+
+<br/>
 
 We moved the existing Android application codebase into a Visual Studio Team Services project space and configured Git as our version control system (VCS). We replaced the GitLab virtual machine with a comparable VCS; this gave us tools to monitor the project and assign work item status. For example, when code check-ins occur, it was easy to configure and deliver stakeholder notifications. Vacay could monitor work progress as it happened no matter where the development occurred.  
 
+<br/>
+
 ![Team Services Notifications]({{ site.baseurl }}/images/Vacay/VSTSNotifications.PNG) 
+
+<br/>
 
 We used Vacay's Java-targeted Android codebase, the Visual Studio Team Services standard workflows, and the Gradle script that produces Android Studio local builds to create an environment to develop a Team Services build process to verify code changes. Because this is part of Team Services, developers can set up gated check-ins so that only code that passes a successful build process can be accepted into the Team Services repository. Instructions for setting up this and other custom configuration rules for continuous integration can be found in the [VisualStudio.com documentation](https://www.visualstudio.com/en-us/docs/build/define/triggers).
 
+<br/>
+
 ![Vacay Build]({{ site.baseurl }}/images/Vacay/VacayBuild.PNG) 
+
+<br/>
 
 The Visual Studio Team Services build process and distribution requires proper Gradle Wrapper build setup. We used the `assembleRelease` value to produce a zip-aligned and signed APK output. HockeyApp will accept any arbitrary APK in a valid build. Output artifacts can be installed on Android devices configured to accept apps from unknown sources, but you can only install HockeyApp on Android devices if the device is signed with a valid keystore/key (in the project's .gradle file). 
 
 It is interesting to note that the [hosted build agent](https://www.visualstudio.com/en-us/docs/build/concepts/agents/hosted) contained all of the prerequisites necessary for proper compilation of our Android Studio project. This included Apache ANT 1.9.7, Apache Maven 3.2.2, and the Android Software Development Kit 25.2.5. The hosted agent not only supports these and other pre-installed packages, but also is available for use free of charge right out of the box in Visual Studio Team Services. Our build only required configuring Team Services to use JDK 8 for successful compilation as shown in **Advanced Settings**.
 
+<br/>
+
 ![Java]({{ site.baseurl }}/images/Vacay/Java.PNG) 
+
+<br/>
 
 The build process includes a step to copy successful build output to HockeyApp. Developers, testers, and stakeholders now have immediate access to the latest builds and can install directly on a compatible Android device.  
 
+<br/>
+
 ![Vacay Build]({{ site.baseurl }}/images/Vacay/HockeyApp.PNG) 
+
+<br/>
 
 We found that the Team Services build log could show the HockeyApp build step as green, while a red 'X' appeared next to the build step, indicating that the HockeyApp build step failed but not providing additional information. We increased log verbosity but that didn't tell us anything else. When we took the produced APK and tried to manually upload it into HockeyApp, we received a message that our APK was unable to be uploaded due to a missing version number in the Android manifest. We resolved this by assigning a version number in the Android manifest as depicted in the following diagram.
 
+<br/>
+
 ![Vacay Build]({{ site.baseurl }}/images/Vacay/AndroidVersion.PNG) 
+
+<br/>
 
 
 ### Integrate Azure App Service into the Android mobile application
@@ -198,6 +266,8 @@ Notification Hubs allows simple user communication and feedback but it requires 
 		}
 	}
 ```
+
+<br/>
 	
 Notifications can be delivered to users as an on-screen pop-up (Toast), sent to the notification drawer, or displayed on the lock screen depending on the state of the device when sent. Devices that use an Android version lower than Android 5.0 (Lollipop) can't receive notifications on the lock screen; instead they will be delivered to the notification drawer. The `NotificationHandler` class is responsible for sending notifications in the application. It makes use of the Android API that is required to send any notification to the user's screen or notification drawer. Following is the code that handles this action.
 
@@ -227,9 +297,15 @@ Notifications can be delivered to users as an on-screen pop-up (Toast), sent to 
 
 Following is an example of the Vacay application receiving a Toast notification.
 
+<br/>
+
 ![Azure Notification Hub to FCM]({{ site.baseurl }}/images/Vacay/azure-notif.png) 
 
+<br/>
+
 ![Vacay Device Notification]({{ site.baseurl }}/images/Vacay/device-notif.png) 
+
+<br/>
 
 Usage data is captured and stored in a Mobile Apps Easy table. Every time an app starts, the app will insert a row in a database table with a timestamp. Currently, the Easy table integration is using the latest version of the [Azure Mobile Apps Android SDK, version 3.1.0](https://docs.microsoft.com/en-us/azure/app-service-mobile/app-service-mobile-migrating-from-mobile-services).
 
@@ -249,6 +325,8 @@ The following code snippet can be found in the main Activity file of the `onStar
 	}, MoreExecutors.directExecutor());
 ```
 
+<br/>
+
 We chose to use `ListenableFuture` instead of the sync approach to make our `insert` call, because `ListenableFuture` allows us to potentially decentralize the logic of what happens after the insert. This approach enables developers to delegate the responsibility of handling async logic to other parts of the application by passing the `future` variable to other parts of the application.
     
 ### Customer example
@@ -256,7 +334,6 @@ We chose to use `ListenableFuture` instead of the sync approach to make our `ins
 [Vacay Coupons website](http://vacaycoupons.azurewebsites.net)
 
 [GSM Media Group website](http://gsmmediagroup.com/)
-
 
 ## Conclusion
 
@@ -266,7 +343,8 @@ Keep in mind that these are only a sampling of the benefits that Vacay can take 
 
 Through our engagement with Vacay, we have showcased the ability for Microsoft technologies to serve as a critical component in modern software industries focused on delivering high availability, scalable mobile applications to a global user base.  
 
-
 ## Additional resources
 
 [![Vacay Coupons Retail Demo]({{ site.baseurl }}/images/Vacay/RetailDemo.PNG)](https://www.youtube.com/watch?v=pp_cDSJOJCQ)
+
+<br/>
