--- a/_posts/2017-03-30-Celsys.md
+++ b/_posts/2017-03-30-Celsys.md
@@ -11,6 +11,7 @@ color: "blue"
 excerpt: CELSYS wanted to meet the demand for a Windows Store version of its successful CLIP STUDIO PAINT animation software. Beginning with a hackfest, CELSYS and Microsoft worked through the conversion process. 
 language: English
 verticals: ["Retail, Consumer Products & Services"]
+published: false
 ---
 
 <img alt="clip studio paint public" src="{{ site.baseurl }}/images/Celsys/clipstudionet.png" width="600">
