Update requests per author

--- a/_posts/2017-03-23-Almaviva.md
+++ b/_posts/2017-03-23-Almaviva.md
@@ -30,8 +30,8 @@ Visual Studio Team Services allows you to associate a single test with a unit te
 
 - [Gianluca Bertelli](https://twitter.com/Bertelli) – Technical Evangelist, Microsoft Italy
 - Paola Presutto – Senior Technical Evangelist, Microsoft Italy
-- Gabriele Mazzocca – AlmavivA
-- Antonio Parisi – AlmavivA 
+- Gabriele Mazzocca – Developer, AlmavivA
+- Antonio Parisi – Head of ALM and DevOps, AlmavivA 
 
 ## Customer profile
 
@@ -220,7 +220,7 @@ The customer can now use the test plans in its build process. The created DLL as
 
 Because this solution requires more steps to be run in a sequence, we have automated this error-prone workflow by creating a PowerShell script that is executed as part of the Marketplace extension.
 
-## Source code ##
+## Source code
 
 The full source code of this solution is available in GitHub at [Java Test Bridge](https://github.com/gianlucb/JavaTestBridge). The [AlmaToolBox extension download](https://marketplace.visualstudio.com/items?itemName=AlmaToolBoxCE.JavaTestBridgeForTestPlan) is available on the Visual Studio Marketplace.
 
@@ -379,7 +379,7 @@ By leveraging Visual Studio Team Services and this created extension, we defined
 This process avoids any human interaction, allows the developers to not take part in the testing process, and achieves a real code integration allowing each commit to be deployed automatically if it does not fail any tests. This also permits the stakeholders that use the test plan feature to have an always updated view of the overall quality of the solution.
 
 
-## Conclusion ##
+## Conclusion
 
 The use of automated tests and test plans during the build process is really important for the customer. The current design that limits this to a .NET assembly was a clear roadblock for a complete automated DevOps solution.
 
@@ -401,9 +401,8 @@ This solution can be the starting point for a bigger solution. Because it's open
 
 We see a huge opportunity here because this can be reused by other customers, and by solving a design limitation of the current version, it can bring more Java developers into the Visual Studio Team Services ecosystem.
 
-## Additional resources ##
+## Additional resources
 
-- [AlmavivA](http://www.almaviva.it/EN/Pagine/default.aspx)
 - [Install Advanced JTest Automation Association from AlmaToolBox](https://marketplace.visualstudio.com/items?itemName=AlmaToolBoxCE.JavaTestBridgeForTestPlan)
 - [Roslyn](https://github.com/dotnet/roslyn)
 - [.NET Reflection](https://msdn.microsoft.com/en-us/library/f7ykdhsy(v=vs.110).aspx)
