--- a/_posts/2017-03-23-Almaviva.md
+++ b/_posts/2017-03-23-Almaviva.md
@@ -10,7 +10,7 @@ color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: Today the integration of automated tests with Visual Studio test plans is available only for .NET projects. If you have a Java project, you can't associate your unit tests with the test plan items. This article discusses a solution to link single Java unit tests with a test plan.
 language: [English]
-verticals: [Manufacturing & Resources, Financial Services, Public Sector, Retail-Consumer Products & Services, Communications/Media, Smart Cities, Other]
+verticals: [Manufacturing & Resources, Financial Services, Public Sector, Retail & Consumer Goods, Communications/Media, Smart Cities, Other]
 ---
 
 We all love automated tests! Having automated tests for your project is a must-have in your DevOps journey. Tests ensure you that your last commit will not break the solution and are your safeguards in a continuous deployment process.
