--- a/_posts/2016-12-08-CIMTOPS.md
+++ b/_posts/2016-12-08-CIMTOPS.md
@@ -10,7 +10,7 @@ color: "blue"
 #image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
 excerpt: Microsoft worked with CIMTOPS to create a IoT solution that remotely monitors numerically controlled machine tools.
 language: [English]
-verticals: [Process Mfg & Resources; Discrete Manufacturing]
+verticals: [Process Mfg & Resources, Discrete Manufacturing]
 geolocation: [Asia]
 #permalink: /<page-title>.html
 ---
