--- a/_posts/2016-09-26-Homitat.md
+++ b/_posts/2016-09-26-Homitat.md
@@ -10,9 +10,8 @@ color: "blue"
 #image: "{{ site.baseurl }}/images/homitat-profile.png" #should be ~350px tall
 excerpt: Homitat was looking to automate sending comprehensive messages to Office 365 groups for subscribed users of its location-rating app for home buyers and renters. Microsoft helped integrate the group registration process into the Homitat website.
 language: English
-verticals: [Real Estate, Smart Cities, "Retail, Consumer Products & Services"]
+verticals: [Real Estate, Smart Cities, Retail & Consumer Goods"]
 ---
-
 
 One of the toughest and most time-consuming tasks for home buyers is researching whether the location of a prospective home will fit their needs. They need to consider factors such as schools, public transit, safety, shopping, traffic, and more for every listing they are interested in, whether it comes from an agent or online search. Comparing these factors across multiple listings makes it even more complex. 
 
