--- a/_posts/2016-11-22-Rockstep.md
+++ b/_posts/2016-11-22-Rockstep.md
@@ -12,7 +12,7 @@ excerpt: RockStep, along with Microsoft, developed a multitenant IoT solution th
 language: English
 verticals: [Life Sciences, Facility Management]
 geolocation: [North America]
-permalink: /iot/2016/12/10/Rockstep.html
+permalink: /2016/12/10/Rockstep.html
 ---
 
 Microsoft joined RockStep to develop a multitenant IoT solution that reduces operating and maintenance costs for their clinical trial customers. Research facilities have thousands of units to house animals, and these units need to be checked on a regular schedule to ensure the conditions are within compliance. RockStep is teaming up with the University of Michigan to run a pilot IoT program that monitors key environmental measurements in real time and will proactively alert technicians when conditions reach a threshold range. By reducing the number of visits to each unit they can cut maintenance and operating costs and improve the overall health of animals.
